--- a/src/02-video.html
+++ b/src/02-video.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <p><a href="index.html">Go back</a></p>
+    <p><a class="main__link" href="index.html">Go back</a></p>
 
+    <div class="video-box">
     <iframe
       id="vimeo-player"
       src="https://player.vimeo.com/video/236203659"
@@ -19,7 +20,8 @@
       allowfullscreen
       allow="autoplay; encrypted-media"
     ></iframe>
-
+    </div>
+    
     <script src="js/02-video.js" type="module"></script>
   </body>
 </html>
