--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="01-gallery.html">Image gallery</a></li>
-      <li><a href="02-video.html">Video playback</a></li>
-      <li><a href="03-feedback.html">Feedback form</a></li>
+    <ul class="main">
+      <li class="main__item"><a class="main__link" href="01-gallery.html">Image gallery</a></li>
+      <li class="main__item"><a class="main__link" href="02-video.html">Video playback</a></li>
+      <li class="main__item"><a class="main__link" href="03-feedback.html">Feedback form</a></li>
     </ul>
   </body>
 </html>
